kubernetes/apps/media/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        stack.arr: "arr-1"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 1.1.1.1
        options:
          - name: ndots
            value: "1"
      containers:
        - name: radarr
          image: linuxserver/radarr:latest
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: movies
              mountPath: /mnt/media/videos/movies
              subPath: videos/movies
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: media-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: qbit-download
